# mrbeam-backend

./: README.md  docker-compose.yml
.github/workflows/: main.yml
api/: .env  .env.docker  Cargo.toml  Dockerfile  docker-compose.yml  sqlx-data.json  test.sh
api/api/: Cargo.toml
api/migrations/: 20230511173616_create_prediction_table.sql
api/scripts/: init_db.sh
api/src/: lib.rs  main.rs  models.rs  services.rs  telemetry.rs
api/src/repository/: prediction.rs
ml-service/: Dockerfile  locustfile.py  requirements.txt
ml-service/app/: api.py  app.py  detector.py  flow.py  settings.py
ml-service/app/utils/: augmentations.py  general.py  metrics.py
ml-service/tests/: test_detector.py
ml-service/tests/resources/: raw_yolo_outputs.pt
