[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
actix = "0.13.0"
actix-multipart = "0.6.0"
actix-web = "4.3.1"
chrono = "0.4.24"
dotenvy = "0.15.7"
image = "0.24.6"
reqwest = { version = "0.11.16", features = ["multipart", "json", "stream"] }
serde = { version = "1.0.160", features = ["derive"] }
sha256 = "1.1.3"
sqlx = { version = "0.6.3", features = ["runtime-actix-rustls", "macros", "chrono", "uuid", "migrate", "postgres", "json"] }
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = "0.7.7"
uuid = "1.3.3"

