[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
actix = "0.13.0"
actix-multipart = "0.6.0"
actix-web = "4.3.1"
aws-creds = "0.35.0"
aws-region = "0.25.3"
chrono = { version = "0.4.24", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
image = "0.24.6"
opentelemetry = { version = "0.19.0", features = ["rt-tokio", "trace"] }
reqwest = { version = "0.11.16", features = ["multipart", "json", "stream"] }
rust-s3 = "0.33.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sha256 = "1.1.3"
sqlx = { version = "0.6.3", features = ["runtime-actix-rustls", "macros", "chrono", "uuid", "migrate", "postgres", "json", "offline"] }
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = "0.7.7"
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.5"
tracing-bunyan-formatter = "0.3.7"
tracing-subscriber = { version = "0.3.17", features = ["serde", "serde_json", "json", "env-filter"] }
uuid = { version = "1.3.3", features = ["serde"] }

