[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-multipart = "0.6.0"
actix-web = "4.3.1"
reqwest = { version = "0.11.16", features = ["multipart"] }
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = "0.7.7"
